optimizer/src/snapshots/spec_consistent_hashes.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import mongo from 'mongodb';

export const Greeter = component$(() => {
	// Double count watch
	useTask$(async () => {
		await mongo.users();
	});
	return (
		<div>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
		</div>
	)
});

============================= test.tsx_Greeter_component_useTask_ibjq2Rfokxw.js (ENTRY POINT)==

import mongo from "mongodb";
export const Greeter_component_useTask_ibjq2Rfokxw = async ()=>{
	await mongo.users();
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_useTask_ibjq2Rfokxw",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_useTask",
  "hash": "ibjq2Rfokxw",
  "canonicalFilename": "test.tsx_Greeter_component_useTask_ibjq2Rfokxw",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    153,
    192
  ]
}
*/
============================= test.tsx_Greeter_component_div_div_on_click_1_qUiGOwID9SE.js (ENTRY POINT)==

export const Greeter_component_div_div_on_click_1_qUiGOwID9SE = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_on_click_1_qUiGOwID9SE",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_on_click_1",
  "hash": "qUiGOwID9SE",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_on_click_1_qUiGOwID9SE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Greeter_component_div_div_on_click_2_2n0r4Lbtxrs.js (ENTRY POINT)==

export const Greeter_component_div_div_on_click_2_2n0r4Lbtxrs = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_on_click_2_2n0r4Lbtxrs",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_on_click_2",
  "hash": "2n0r4Lbtxrs",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_on_click_2_2n0r4Lbtxrs",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_2n0r4Lbtxrs = ()=>import("./test.tsx_Greeter_component_div_div_on_click_2_2n0r4Lbtxrs");
const i_qUiGOwID9SE = ()=>import("./test.tsx_Greeter_component_div_div_on_click_1_qUiGOwID9SE");
const i_ibjq2Rfokxw = ()=>import("./test.tsx_Greeter_component_useTask_ibjq2Rfokxw");
export const Greeter_component_n7HuG2hhU0Q = ()=>{
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ibjq2Rfokxw, "Greeter_component_useTask_ibjq2Rfokxw"));
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ibjq2Rfokxw, "Greeter_component_useTask_ibjq2Rfokxw")) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_qUiGOwID9SE, "Greeter_component_div_div_on_click_1_qUiGOwID9SE") }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_2n0r4Lbtxrs, "Greeter_component_div_div_on_click_2_2n0r4Lbtxrs") }, null, null, 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    112,
    316
  ]
}
*/
============================= test.js ==

import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_ibjq2Rfokxw = ()=>import("./test.tsx_Greeter_component_useTask_ibjq2Rfokxw");
const i_n7HuG2hhU0Q = ()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_n7HuG2hhU0Q, "Greeter_component_n7HuG2hhU0Q"));


None
== DIAGNOSTICS ==

[]
