optimizer/src/snapshots/spec_destructure_args_inline_cmp_block_stmt.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

export default ({ data }: { data: any }) => {
  return (
    <div
      data-is-active={data.selectedOutputDetail === 'options'}
      onClick$={() => {
        data.selectedOutputDetail = 'options';
      }}
    />
  );
};

============================= test.tsx_test_div_on_click_HJR5N4Nizkc.js (ENTRY POINT)==

export const test_div_on_click_HJR5N4Nizkc = ()=>{
	data.selectedOutputDetail = "options";
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_div_on_click_HJR5N4Nizkc",
  "entry": null,
  "displayName": "test.tsx_test_div_on_click",
  "hash": "HJR5N4Nizkc",
  "canonicalFilename": "test.tsx_test_div_on_click_HJR5N4Nizkc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_HJR5N4Nizkc = ()=>import("./test.tsx_test_div_on_click_HJR5N4Nizkc");
export default ({ data })=>{
	return /*#__PURE__*/ _jsxSorted("div", {
		data-is-active: data.selectedOutputDetail === "options",
		"on:click": /*#__PURE__*/ qrl(i_HJR5N4Nizkc, "test_div_on_click_HJR5N4Nizkc")
	}, null, null, 3, null);
};


None
== DIAGNOSTICS ==

[]
