optimizer/src/snapshots/spec_example_1.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component, onRender } from '@qwik.dev/core';

export const renderHeader = $(() => {
	return (
		<div onClick={$((ctx) => console.log(ctx))}/>
	);
});
const renderHeader = component($(() => {
	console.log("mount");
	return render;
}));

============================= test.tsx_renderHeader_zBbHWn4e8Cg.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_fV2uzAL99u4 = ()=>import("./test.tsx_renderHeader_div_onClick_fV2uzAL99u4");
export const renderHeader_zBbHWn4e8Cg = ()=>{
	return <div onClick={/*#__PURE__*/ qrl(i_fV2uzAL99u4, "renderHeader_div_onClick_fV2uzAL99u4")} />;
};


None
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_zBbHWn4e8Cg",
  "entry": null,
  "displayName": "test.tsx_renderHeader",
  "hash": "zBbHWn4e8Cg",
  "canonicalFilename": "test.tsx_renderHeader_zBbHWn4e8Cg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    88,
    159
  ]
}
*/
============================= test.tsx_renderHeader_component_U6Kkv07sbpQ.tsx (ENTRY POINT)==

export const renderHeader_component_U6Kkv07sbpQ = ()=>{
	console.log("mount");
	return render;
};


None
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_component_U6Kkv07sbpQ",
  "entry": null,
  "displayName": "test.tsx_renderHeader_component",
  "hash": "U6Kkv07sbpQ",
  "canonicalFilename": "test.tsx_renderHeader_component_U6Kkv07sbpQ",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    195,
    243
  ]
}
*/
============================= test.tsx_renderHeader_div_onClick_fV2uzAL99u4.tsx (ENTRY POINT)==

export const renderHeader_div_onClick_fV2uzAL99u4 = (ctx)=>console.log(ctx);


None
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_div_onClick_fV2uzAL99u4",
  "entry": null,
  "displayName": "test.tsx_renderHeader_div_onClick",
  "hash": "fV2uzAL99u4",
  "canonicalFilename": "test.tsx_renderHeader_div_onClick_fV2uzAL99u4",
  "path": "",
  "extension": "tsx",
  "parent": "$0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    124,
    149
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
import { component } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { component } from "@qwik.dev/core";
const i_fV2uzAL99u4 = ()=>import("./test.tsx_renderHeader_div_onClick_fV2uzAL99u4");
const i_zBbHWn4e8Cg = ()=>import("./test.tsx_renderHeader_zBbHWn4e8Cg");
const i_U6Kkv07sbpQ = ()=>import("./test.tsx_renderHeader_component_U6Kkv07sbpQ");
export const renderHeader = /*#__PURE__*/ qrl(i_zBbHWn4e8Cg, "renderHeader_zBbHWn4e8Cg");
const renderHeader = component(/*#__PURE__*/ qrl(i_U6Kkv07sbpQ, "renderHeader_component_U6Kkv07sbpQ"));


None
== DIAGNOSTICS ==

[]
