optimizer/src/snapshots/spec_example_10.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
const Header = $((decl1, {decl2}, [decl3]) => {

	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], {ident7}, {key: ident8});
	class Some {
		prop = ident9;
		method() {
			return ident10;
		}
	}

	return (
		<div onClick={(ident11) => ident11 + ident12} required={false}/>
	)
});

============================= test.tsx_Header_WlR3xnI6u38.tsx (ENTRY POINT)==

export const Header_WlR3xnI6u38 = (decl1, { decl2 }, [decl3])=>{
	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], { ident7 }, { key: ident8 });
	return <div onClick={(ident11)=>ident11 + ident12} required={false} />;
};


None
/*
{
  "origin": "project/test.tsx",
  "name": "Header_WlR3xnI6u38",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "WlR3xnI6u38",
  "canonicalFilename": "test.tsx_Header_WlR3xnI6u38",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    65,
    391
  ]
}
*/
============================= project/test.tsx ==

import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_WlR3xnI6u38 = ()=>import("./test.tsx_Header_WlR3xnI6u38");
/*#__PURE__*/ qrl(i_WlR3xnI6u38, "Header_WlR3xnI6u38");


None
== DIAGNOSTICS ==

[]
