optimizer/src/snapshots/spec_example_5.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
export const Header = component$(() => {
	return (
		<>
			<div onClick={(ctx) => console.log("1")}/>
			<div onClick={$((ctx) => console.log("2"))}/>
		</>
	);
});

============================= test.tsx_Header_component_J4uyIhaBNR4.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_i7ekvWH3674 = ()=>import("./test.tsx_Header_component_div_onClick_i7ekvWH3674");
export const Header_component_J4uyIhaBNR4 = ()=>{
	return <>
			<div onClick={(ctx)=>console.log("1")} />
			<div onClick={/*#__PURE__*/ qrl(i_i7ekvWH3674, "Header_component_div_onClick_i7ekvWH3674")} />
		</>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "test.tsx_Header_component_J4uyIhaBNR4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    210
  ]
}
*/
============================= test.tsx_Header_component_div_onClick_i7ekvWH3674.tsx (ENTRY POINT)==

export const Header_component_div_onClick_i7ekvWH3674 = (ctx)=>console.log("2");


None
/*
{
  "origin": "test.tsx",
  "name": "Header_component_div_onClick_i7ekvWH3674",
  "entry": null,
  "displayName": "test.tsx_Header_component_div_onClick",
  "hash": "i7ekvWH3674",
  "canonicalFilename": "test.tsx_Header_component_div_onClick_i7ekvWH3674",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    169,
    194
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_i7ekvWH3674 = ()=>import("./test.tsx_Header_component_div_onClick_i7ekvWH3674");
const i_J4uyIhaBNR4 = ()=>import("./test.tsx_Header_component_J4uyIhaBNR4");
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_J4uyIhaBNR4, "Header_component_J4uyIhaBNR4"));


None
== DIAGNOSTICS ==

[]
