optimizer/src/snapshots/spec_example_9.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
const Header = $((decl1, {decl2}, [decl3]) => {
	const {decl4, key: decl5} = this;
	let [decl6, ...decl7] = stuff;
	const decl8 = 1, decl9;
	function decl10(decl11, {decl12}, [decl13]) {}
	class decl14 {
		method(decl15, {decl16}, [decl17]) {}
	}
	try{}catch(decl18){}
	try{}catch({decl19}){}
});

============================= test.tsx_Header_WjUaUQN7Oxg.tsx (ENTRY POINT)==

export const Header_WjUaUQN7Oxg = (decl1, { decl2 }, [decl3])=>{
	const { decl4, key: decl5 } = this;
	let [decl6, ...decl7] = stuff;
	const decl8 = 1, decl9;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Header_WjUaUQN7Oxg",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "WjUaUQN7Oxg",
  "canonicalFilename": "test.tsx_Header_WjUaUQN7Oxg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    65,
    342
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_WjUaUQN7Oxg = ()=>import("./test.tsx_Header_WjUaUQN7Oxg");
/*#__PURE__*/ qrl(i_WjUaUQN7Oxg, "Header_WjUaUQN7Oxg");


None
== DIAGNOSTICS ==

[]
